chang some components

--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tarojs/async-await": "0.0.56",
-    "@tarojs/components": "0.0.56",
-    "@tarojs/redux": "0.0.56",
-    "@tarojs/router": "0.0.56",
-    "@tarojs/taro": "0.0.56",
-    "@tarojs/taro-h5": "0.0.56",
-    "@tarojs/taro-weapp": "0.0.56",
-    "@tarojs/webpack-runner": "0.0.56",
+    "@tarojs/async-await": "^0.0.59",
+    "@tarojs/components": "^0.0.59",
+    "@tarojs/redux": "^0.0.59",
+    "@tarojs/router": "^0.0.59",
+    "@tarojs/taro": "^0.0.59",
+    "@tarojs/taro-h5": "^0.0.59",
+    "@tarojs/taro-weapp": "^0.0.59",
+    "@tarojs/webpack-runner": "^0.0.59",
     "nerv-redux": "^1.2.17",
     "nervjs": "^1.2.16",
     "redux": "^3.7.2",
@@ -27,9 +27,11 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "@tarojs/plugin-babel": "0.0.56",
-    "@tarojs/plugin-sass": "0.0.56",
-    "@tarojs/webpack-runner": "0.0.56",
+    "@tarojs/plugin-babel": "^0.0.59",
+    "@tarojs/plugin-csso": "^0.0.59",
+    "@tarojs/plugin-sass": "^0.0.59",
+    "@tarojs/plugin-uglifyjs": "^0.0.59",
+    "@tarojs/webpack-runner": "^0.0.59",
     "babel-eslint": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
