fix: 修正 Taro 未引入错误

--- a/package.json
+++ b/package.json
@@ -1,49 +1,49 @@
 {
-  "name": "taro-components-sample",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build:h5": "taro build --type h5",
-    "serve:h5": "taro build --type h5 --watch",
-    "build:weapp": "taro build --type weapp",
-    "serve:weapp": "taro build --type weapp --watch"
-  },
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "@tarojs/async-await": "^0.0.59",
-    "@tarojs/components": "^0.0.59",
-    "@tarojs/redux": "^0.0.59",
-    "@tarojs/router": "^0.0.59",
-    "@tarojs/taro": "^0.0.59",
-    "@tarojs/taro-h5": "^0.0.59",
-    "@tarojs/taro-weapp": "^0.0.59",
-    "@tarojs/webpack-runner": "^0.0.59",
-    "nerv-redux": "^1.2.17",
-    "nervjs": "^1.2.16",
-    "redux": "^3.7.2",
-    "redux-actions": "^2.3.0",
-    "redux-thunk": "^2.2.0"
-  },
-  "devDependencies": {
-    "@tarojs/plugin-babel": "^0.0.59",
-    "@tarojs/plugin-csso": "^0.0.59",
-    "@tarojs/plugin-sass": "^0.0.59",
-    "@tarojs/plugin-uglifyjs": "^0.0.59",
-    "@tarojs/webpack-runner": "^0.0.59",
-    "babel-eslint": "^8.2.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "eslint": "^4.19.1",
-    "eslint-config-standard-jsx": "^5.0.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-react": "^7.9.1",
-    "eslint-plugin-standard": "^3.1.0"
-  }
+	"name": "taro-components-sample",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build:h5": "taro build --type h5",
+		"serve:h5": "taro build --type h5 --watch",
+		"build:weapp": "taro build --type weapp",
+		"serve:weapp": "taro build --type weapp --watch"
+	},
+	"author": "",
+	"license": "MIT",
+	"dependencies": {
+		"@tarojs/async-await": "0.0.60",
+		"@tarojs/components": "0.0.60",
+		"@tarojs/redux": "0.0.60",
+		"@tarojs/router": "0.0.60",
+		"@tarojs/taro": "0.0.60",
+		"@tarojs/taro-h5": "0.0.60",
+		"@tarojs/taro-weapp": "0.0.60",
+		"@tarojs/webpack-runner": "0.0.60",
+		"nerv-redux": "^1.2.17",
+		"nervjs": "^1.2.16",
+		"redux": "^3.7.2",
+		"redux-actions": "^2.3.0",
+		"redux-thunk": "^2.2.0"
+	},
+	"devDependencies": {
+		"@tarojs/plugin-babel": "0.0.60",
+		"@tarojs/plugin-csso": "0.0.60",
+		"@tarojs/plugin-sass": "0.0.60",
+		"@tarojs/plugin-uglifyjs": "0.0.60",
+		"@tarojs/webpack-runner": "0.0.60",
+		"babel-eslint": "^8.2.3",
+		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-plugin-transform-decorators-legacy": "^1.3.4",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
+		"babel-preset-env": "^1.6.1",
+		"eslint": "^4.19.1",
+		"eslint-config-standard-jsx": "^5.0.0",
+		"eslint-loader": "^2.0.0",
+		"eslint-plugin-import": "^2.12.0",
+		"eslint-plugin-node": "^6.0.1",
+		"eslint-plugin-promise": "^3.8.0",
+		"eslint-plugin-react": "^7.9.1",
+		"eslint-plugin-standard": "^3.1.0"
+	}
 }
