fix: 修复展示的一些问题

--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build:h5": "taro build --type h5",
-		"serve:h5": "taro build --type h5 --watch",
-		"build:weapp": "taro build --type weapp",
-		"serve:weapp": "taro build --type weapp --watch"
+	  "build:weapp": "taro build --type weapp",
+    "build:h5": "taro build --type h5",
+    "dev:weapp": "npm run build:weapp -- --watch",
+    "dev:h5": "npm run build:h5 -- --watch"
 	},
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
-		"@tarojs/async-await": "0.0.68",
-		"@tarojs/components": "0.0.68",
-		"@tarojs/redux": "0.0.68",
-		"@tarojs/router": "0.0.68",
-		"@tarojs/taro": "0.0.68",
-		"@tarojs/taro-h5": "0.0.68",
-		"@tarojs/taro-weapp": "0.0.68",
-		"@tarojs/webpack-runner": "0.0.68",
+		"@tarojs/async-await": "latest",
+		"@tarojs/components": "latest",
+		"@tarojs/redux": "latest",
+		"@tarojs/router": "latest",
+		"@tarojs/taro": "latest",
+		"@tarojs/taro-h5": "latest",
+		"@tarojs/taro-weapp": "latest",
+		"@tarojs/webpack-runner": "latest",
 		"nerv-redux": "^1.2.17",
 		"nervjs": "^1.2.16",
 		"redux": "^3.7.2",
@@ -27,11 +27,11 @@
 		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
-		"@tarojs/plugin-babel": "0.0.68",
-		"@tarojs/plugin-csso": "0.0.68",
-		"@tarojs/plugin-sass": "0.0.68",
-		"@tarojs/plugin-uglifyjs": "0.0.68",
-		"@tarojs/webpack-runner": "0.0.68",
+		"@tarojs/plugin-babel": "latest",
+		"@tarojs/plugin-csso": "latest",
+		"@tarojs/plugin-sass": "latest",
+		"@tarojs/plugin-uglifyjs": "latest",
+		"@tarojs/webpack-runner": "latest",
 		"babel-eslint": "^8.2.3",
 		"babel-plugin-transform-class-properties": "^6.24.1",
 		"babel-plugin-transform-decorators-legacy": "^1.3.4",
