chore: 更新组件结构

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-	  "build:weapp": "taro build --type weapp",
-    "build:h5": "taro build --type h5",
-    "dev:weapp": "npm run build:weapp -- --watch",
-    "dev:h5": "npm run build:h5 -- --watch"
+		"build:weapp": "taro build --type weapp",
+		"build:h5": "taro build --type h5",
+		"dev:weapp": "npm run build:weapp -- --watch",
+		"dev:h5": "npm run build:h5 -- --watch"
 	},
 	"author": "",
 	"license": "MIT",
@@ -39,6 +39,7 @@
 		"babel-preset-env": "^1.6.1",
 		"eslint": "^4.19.1",
 		"eslint-config-standard-jsx": "^5.0.0",
+		"eslint-config-taro": "^0.0.70",
 		"eslint-loader": "^2.0.0",
 		"eslint-plugin-import": "^2.12.0",
 		"eslint-plugin-node": "^6.0.1",
