--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
 	"scripts": {
 		"build:weapp": "taro build --type weapp",
 		"build:h5": "taro build --type h5",
+		"build:rn": "taro build --type rn",
 		"dev:weapp": "npm run build:weapp -- --watch",
-		"dev:h5": "npm run build:h5 -- --watch"
+		"dev:h5": "npm run build:h5 -- --watch",
+		"dev:rn": "npm run build:rn -- --watch"
 	},
 	"author": "",
 	"license": "MIT",
@@ -15,6 +17,7 @@
 		"@tarojs/async-await": "1.0.0-beta.8",
 		"@tarojs/components": "1.0.0-beta.8",
 		"@tarojs/redux": "1.0.0-beta.8",
+		"@tarojs/rn-runner": "^1.0.0-beta.10",
 		"@tarojs/router": "1.0.0-beta.8",
 		"@tarojs/taro": "1.0.0-beta.8",
 		"@tarojs/taro-h5": "1.0.0-beta.8",
@@ -35,6 +38,7 @@
 		"babel-eslint": "^8.2.3",
 		"babel-plugin-transform-class-properties": "^6.24.1",
 		"babel-plugin-transform-decorators-legacy": "^1.3.4",
+		"babel-plugin-transform-jsx-stylesheet": "^0.6.5",
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-preset-env": "^1.6.1",
 		"eslint": "^4.19.1",
