--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
-		"@tarojs/async-await": "1.0.0-beta.10",
-		"@tarojs/components": "1.0.0-beta.10",
-		"@tarojs/redux": "1.0.0-beta.10",
-		"@tarojs/router": "1.0.0-beta.10",
-		"@tarojs/taro": "1.0.0-beta.10",
-		"@tarojs/cli": "1.0.0-beta.10",
-		"@tarojs/taro-h5": "1.0.0-beta.10",
-		"@tarojs/taro-weapp": "1.0.0-beta.10",
-		"@tarojs/webpack-runner": "1.0.0-beta.10",
+		"@tarojs/async-await": "1.0.1",
+		"@tarojs/components": "1.0.1",
+		"@tarojs/redux": "1.0.1",
+		"@tarojs/router": "1.0.1",
+		"@tarojs/taro": "1.0.1",
+		"@tarojs/cli": "1.0.1",
+		"@tarojs/taro-h5": "1.0.1",
+		"@tarojs/taro-weapp": "1.0.1",
+		"@tarojs/webpack-runner": "1.0.1",
 		"nerv-redux": "^1.2.17",
 		"nervjs": "^1.2.16",
 		"redux": "^3.7.2",
@@ -28,11 +28,11 @@
 		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
-		"@tarojs/plugin-babel": "1.0.0-beta.10",
-		"@tarojs/plugin-csso": "1.0.0-beta.10",
-		"@tarojs/plugin-sass": "1.0.0-beta.10",
-		"@tarojs/plugin-uglifyjs": "1.0.0-beta.10",
-		"@tarojs/webpack-runner": "1.0.0-beta.10",
+		"@tarojs/plugin-babel": "1.0.1",
+		"@tarojs/plugin-csso": "1.0.1",
+		"@tarojs/plugin-sass": "1.0.1",
+		"@tarojs/plugin-uglifyjs": "1.0.1",
+		"@tarojs/webpack-runner": "1.0.1",
 		"babel-eslint": "^8.2.3",
 		"babel-plugin-transform-class-properties": "^6.24.1",
 		"babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -40,7 +40,7 @@
 		"babel-preset-env": "^1.6.1",
 		"eslint": "^4.19.1",
 		"eslint-config-standard-jsx": "^5.0.0",
-		"eslint-config-taro": "1.0.0-beta.10",
+		"eslint-config-taro": "1.0.1",
 		"eslint-loader": "^2.0.0",
 		"eslint-plugin-import": "^2.12.0",
 		"eslint-plugin-node": "^6.0.1",
