--- a/package.json
+++ b/package.json
@@ -1,52 +1,53 @@
 {
-	"name": "taro-components-sample",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"build:weapp": "taro build --type weapp",
-		"build:h5": "taro build --type h5",
-		"dev:weapp": "npm run build:weapp -- --watch",
-		"dev:h5": "npm run build:h5 -- --watch"
-	},
-	"author": "",
-	"license": "MIT",
-	"dependencies": {
-		"@tarojs/async-await": "1.1.0-beta.13",
-		"@tarojs/cli": "1.1.0-beta.13",
-		"@tarojs/components": "1.1.0-beta.13",
-		"@tarojs/redux": "1.1.0-beta.13",
-		"@tarojs/router": "1.1.0-beta.13",
-		"@tarojs/taro": "1.1.0-beta.13",
-		"@tarojs/taro-alipay": "^1.1.0-beta.2",
-		"@tarojs/taro-h5": "1.1.0-beta.13",
-		"@tarojs/taro-weapp": "1.1.0-beta.13",
-		"@tarojs/webpack-runner": "1.1.0-beta.13",
-		"nerv-redux": "^1.2.17",
-		"nervjs": "^1.2.16",
-		"redux": "^3.7.2",
-		"redux-actions": "^2.3.0",
-		"redux-thunk": "^2.2.0"
-	},
-	"devDependencies": {
-		"@tarojs/plugin-babel": "1.1.0-beta.13",
-		"@tarojs/plugin-csso": "1.1.0-beta.13",
-		"@tarojs/plugin-sass": "1.1.0-beta.13",
-		"@tarojs/plugin-uglifyjs": "1.1.0-beta.13",
-		"@tarojs/webpack-runner": "1.1.0-beta.13",
-		"babel-eslint": "^8.2.3",
-		"babel-plugin-transform-class-properties": "^6.24.1",
-		"babel-plugin-transform-decorators-legacy": "^1.3.4",
-		"babel-plugin-transform-object-rest-spread": "^6.26.0",
-		"babel-preset-env": "^1.6.1",
-		"eslint": "^4.19.1",
-		"eslint-config-standard-jsx": "^5.0.0",
-		"eslint-config-taro": "1.1.0-beta.13",
-		"eslint-loader": "^2.0.0",
-		"eslint-plugin-import": "^2.12.0",
-		"eslint-plugin-node": "^6.0.1",
-		"eslint-plugin-promise": "^3.8.0",
-		"eslint-plugin-react": "^7.9.1",
-		"eslint-plugin-standard": "^3.1.0"
-	}
+  "name": "taro-components-sample",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build:weapp": "taro build --type weapp",
+    "build:h5": "taro build --type h5",
+    "dev:weapp": "npm run build:weapp -- --watch",
+    "dev:h5": "npm run build:h5 -- --watch"
+  },
+  "author": "",
+  "license": "MIT",
+  "dependencies": {
+    "@tarojs/async-await": "1.1.2",
+    "@tarojs/cli": "1.1.2",
+    "@tarojs/components": "1.1.2",
+    "@tarojs/redux": "1.1.2",
+    "@tarojs/router": "1.1.2",
+    "@tarojs/taro": "1.1.2",
+    "@tarojs/taro-alipay": "^1.1.0-beta.2",
+    "@tarojs/taro-h5": "1.1.2",
+    "@tarojs/taro-swan": "^1.1.2",
+    "@tarojs/taro-weapp": "1.1.2",
+    "@tarojs/webpack-runner": "1.1.2",
+    "nerv-redux": "^1.2.17",
+    "nervjs": "^1.2.16",
+    "redux": "^3.7.2",
+    "redux-actions": "^2.3.0",
+    "redux-thunk": "^2.2.0"
+  },
+  "devDependencies": {
+    "@tarojs/plugin-babel": "1.1.2",
+    "@tarojs/plugin-csso": "1.1.2",
+    "@tarojs/plugin-sass": "1.1.2",
+    "@tarojs/plugin-uglifyjs": "1.1.2",
+    "@tarojs/webpack-runner": "1.1.2",
+    "babel-eslint": "^8.2.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "eslint": "^4.19.1",
+    "eslint-config-standard-jsx": "^5.0.0",
+    "eslint-config-taro": "1.1.2",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-react": "^7.9.1",
+    "eslint-plugin-standard": "^3.1.0"
+  }
 }
