--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tarojs/async-await": "1.1.2",
-    "@tarojs/cli": "1.1.2",
-    "@tarojs/components": "1.1.2",
-    "@tarojs/redux": "1.1.2",
-    "@tarojs/router": "1.1.2",
-    "@tarojs/taro": "1.1.2",
-    "@tarojs/taro-alipay": "^1.1.0-beta.2",
-    "@tarojs/taro-h5": "1.1.2",
-    "@tarojs/taro-swan": "^1.1.2",
-    "@tarojs/taro-weapp": "1.1.2",
-    "@tarojs/webpack-runner": "1.1.2",
+    "@tarojs/async-await": "1.2.0-beta.1",
+    "@tarojs/cli": "1.2.0-beta.1",
+    "@tarojs/components": "1.2.0-beta.1",
+    "@tarojs/redux": "1.2.0-beta.1",
+    "@tarojs/router": "1.2.0-beta.1",
+    "@tarojs/taro": "1.2.0-beta.1",
+    "@tarojs/taro-alipay": "1.2.0-beta.1",
+    "@tarojs/taro-h5": "1.2.0-beta.1",
+    "@tarojs/taro-swan": "1.2.0-beta.1",
+    "@tarojs/taro-weapp": "1.2.0-beta.1",
+    "@tarojs/webpack-runner": "1.2.0-beta.1",
     "nerv-redux": "^1.2.17",
     "nervjs": "^1.2.16",
     "redux": "^3.7.2",
@@ -30,11 +30,11 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "@tarojs/plugin-babel": "1.1.2",
-    "@tarojs/plugin-csso": "1.1.2",
-    "@tarojs/plugin-sass": "1.1.2",
-    "@tarojs/plugin-uglifyjs": "1.1.2",
-    "@tarojs/webpack-runner": "1.1.2",
+    "@tarojs/plugin-babel": "1.2.0-beta.1",
+    "@tarojs/plugin-csso": "1.2.0-beta.1",
+    "@tarojs/plugin-sass": "1.2.0-beta.1",
+    "@tarojs/plugin-uglifyjs": "1.2.0-beta.1",
+    "@tarojs/webpack-runner": "1.2.0-beta.1",
     "babel-eslint": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -42,7 +42,7 @@
     "babel-preset-env": "^1.6.1",
     "eslint": "^4.19.1",
     "eslint-config-standard-jsx": "^5.0.0",
-    "eslint-config-taro": "1.1.2",
+    "eslint-config-taro": "1.2.0-beta.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-node": "^6.0.1",
