--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@tarojs/plugin-babel": "1.2.12",
     "@tarojs/plugin-csso": "1.2.12",
-    "@tarojs/plugin-sass": "1.2.12",
+    "@tarojs/plugin-sass": "^1.2.21",
     "@tarojs/plugin-uglifyjs": "1.2.12",
     "@tarojs/webpack-runner": "1.2.12",
     "babel-eslint": "^8.2.3",
