--- a/package.json
+++ b/package.json
@@ -13,19 +13,16 @@
   "license": "MIT",
   "dependencies": {
     "@tarojs/async-await": "1.2.12",
-    "@tarojs/cli": "1.2.12",
-    "@tarojs/components": "1.2.12",
-    "@tarojs/redux": "1.2.12",
-    "@tarojs/router": "1.2.12",
-    "@tarojs/taro": "1.2.12",
-    "@tarojs/taro-alipay": "1.2.12",
-    "@tarojs/taro-h5": "1.2.12",
-    "@tarojs/taro-swan": "1.2.12",
-    "@tarojs/taro-tt": "^1.2.12",
-    "@tarojs/taro-weapp": "1.2.12",
-    "@tarojs/webpack-runner": "1.2.12",
-    "nerv-redux": "^1.2.17",
-    "nervjs": "^1.2.16",
+    "@tarojs/components": "^3.0.0-alpha.7",
+    "@tarojs/mini-runner": "^3.0.0-alpha.7",
+    "@tarojs/react": "^3.0.0-alpha.7",
+    "@tarojs/runtime": "^3.0.0-alpha.7",
+    "@tarojs/taro": "^3.0.0-alpha.7",
+    "@tarojs/webpack-runner": "^3.0.0-alpha.7",
+    "babel-preset-taro": "^3.0.0-alpha.7",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
     "redux-thunk": "^2.2.0"
@@ -35,7 +32,6 @@
     "@tarojs/plugin-csso": "1.2.12",
     "@tarojs/plugin-sass": "^1.2.21",
     "@tarojs/plugin-uglifyjs": "1.2.12",
-    "@tarojs/webpack-runner": "1.2.12",
     "babel-eslint": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
