--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-redux": "^7.2.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@tarojs/plugin-babel": "1.2.12",
