--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tarojs/taro": "^3.0.0-alpha.7",
     "@tarojs/webpack-runner": "^3.0.0-alpha.7",
     "babel-preset-taro": "^3.0.0-alpha.7",
+    "nervjs": "^1.5.6",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
