--- a/package.json
+++ b/package.json
@@ -12,18 +12,16 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tarojs/async-await": "1.2.12",
-    "@tarojs/cli": "1.2.12",
-    "@tarojs/components": "1.2.12",
-    "@tarojs/redux": "1.2.12",
-    "@tarojs/router": "1.2.12",
-    "@tarojs/taro": "1.2.12",
-    "@tarojs/taro-alipay": "1.2.12",
-    "@tarojs/taro-h5": "1.2.12",
-    "@tarojs/taro-swan": "1.2.12",
-    "@tarojs/taro-tt": "^1.2.12",
-    "@tarojs/taro-weapp": "1.2.12",
-    "@tarojs/webpack-runner": "1.2.12",
+    "@tarojs/cli": "2.2.4",
+    "@tarojs/components": "2.2.4",
+    "@tarojs/redux": "2.2.4",
+    "@tarojs/router": "2.2.4",
+    "@tarojs/taro": "2.2.4",
+    "@tarojs/taro-alipay": "2.2.4",
+    "@tarojs/taro-h5": "2.2.4",
+    "@tarojs/taro-swan": "2.2.4",
+    "@tarojs/taro-tt": "^2.2.4",
+    "@tarojs/taro-weapp": "2.2.4",
     "nerv-redux": "^1.2.17",
     "nervjs": "^1.2.16",
     "redux": "^3.7.2",
@@ -31,11 +29,8 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "@tarojs/plugin-babel": "1.2.12",
-    "@tarojs/plugin-csso": "1.2.12",
-    "@tarojs/plugin-sass": "^1.2.21",
-    "@tarojs/plugin-uglifyjs": "1.2.12",
-    "@tarojs/webpack-runner": "1.2.12",
+    "@tarojs/mini-runner": "2.2.4",
+    "@tarojs/webpack-runner": "2.2.4",
     "babel-eslint": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -43,13 +38,13 @@
     "babel-preset-env": "^1.6.1",
     "eslint": "^4.19.1",
     "eslint-config-standard-jsx": "^5.0.0",
-    "eslint-config-taro": "1.2.12",
+    "eslint-config-taro": "2.2.4",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^7.9.1",
     "eslint-plugin-standard": "^3.1.0",
-    "eslint-plugin-taro": "1.2.12"
+    "eslint-plugin-taro": "2.2.4"
   }
 }
