--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "license": "MIT",
   "dependencies": {
     "@tarojs/async-await": "1.2.12",
-    "@tarojs/components": "^3.0.0-alpha.7",
-    "@tarojs/mini-runner": "^3.0.0-alpha.7",
-    "@tarojs/react": "^3.0.0-alpha.7",
-    "@tarojs/runtime": "^3.0.0-alpha.7",
-    "@tarojs/taro": "^3.0.0-alpha.7",
-    "@tarojs/webpack-runner": "^3.0.0-alpha.7",
-    "babel-preset-taro": "^3.0.0-alpha.7",
+    "@tarojs/components": "^3.0.7",
+    "@tarojs/mini-runner": "^3.0.7",
+    "@tarojs/react": "^3.0.7",
+    "@tarojs/runtime": "^3.0.7",
+    "@tarojs/taro": "^3.0.7",
+    "@tarojs/webpack-runner": "^3.0.7",
+    "babel-preset-taro": "^3.0.7",
     "nervjs": "^1.5.6",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
