--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "license": "MIT",
   "dependencies": {
     "@tarojs/async-await": "1.2.12",
-    "@tarojs/components": "^3.0.0-alpha.7",
-    "@tarojs/mini-runner": "^3.0.0-alpha.7",
-    "@tarojs/react": "^3.0.0-alpha.7",
-    "@tarojs/runtime": "^3.0.0-alpha.7",
-    "@tarojs/taro": "^3.0.0-alpha.7",
-    "@tarojs/webpack-runner": "^3.0.0-alpha.7",
-    "babel-preset-taro": "^3.0.0-alpha.7",
+    "@tarojs/components": "^3.0.7",
+    "@tarojs/mini-runner": "^3.0.7",
+    "@tarojs/react": "^3.0.7",
+    "@tarojs/runtime": "^3.0.7",
+    "@tarojs/taro": "^3.0.7",
+    "@tarojs/webpack-runner": "^3.0.7",
+    "babel-preset-taro": "^3.0.7",
     "nervjs": "^1.5.6",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -27,7 +27,9 @@
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
     "redux-thunk": "^2.2.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.11"
   },
   "devDependencies": {
     "@tarojs/plugin-babel": "1.2.12",
