--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tarojs/components": "^3.0.7",
-    "@tarojs/react": "^3.0.7",
-    "@tarojs/runtime": "^3.0.7",
-    "@tarojs/taro": "^3.0.7",
+    "@tarojs/components": "^3.0.8",
+    "@tarojs/react": "^3.0.8",
+    "@tarojs/runtime": "^3.0.8",
+    "@tarojs/taro": "^3.0.8",
     "nervjs": "^1.5.6",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -25,17 +25,17 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "@tarojs/mini-runner": "^3.0.7",
-    "@tarojs/webpack-runner": "^3.0.7",
+    "@tarojs/mini-runner": "^3.0.8",
+    "@tarojs/webpack-runner": "^3.0.8",
     "babel-eslint": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-taro": "^3.0.7",
+    "babel-preset-taro": "^3.0.8",
     "babel-preset-env": "^1.6.1",
     "eslint": "^4.19.1",
     "eslint-config-standard-jsx": "^5.0.0",
-    "eslint-config-taro": "3.0.7",
+    "eslint-config-taro": "^3.0.8",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-node": "^6.0.1",
