--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taro-components-sample",
+  "name": "TaroHarmony",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,10 +13,12 @@
   "license": "MIT",
   "dependencies": {
     "@tarojs/components": "3.4.0-beta.0",
+    "@tarojs/plugin-framework-react": "3.4.0-beta.0",
+    "@tarojs/plugin-framework-vue2": "^3.4.0-beta.0",
+    "@tarojs/plugin-framework-vue3": "^3.4.0-beta.0",
     "@tarojs/react": "3.4.0-beta.0",
     "@tarojs/runtime": "3.4.0-beta.0",
     "@tarojs/taro": "3.4.0-beta.0",
-    "@tarojs/plugin-framework-react": "3.4.0-beta.0",
     "nervjs": "^1.5.6",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
